<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_blue_black"
        tools:context=".activity.MainActivity">
        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/worksans_light"
                android:text="@string/sign_in"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
        <ScrollView
            android:layout_above="@+id/llSignIn"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingStart="@dimen/_25sdp"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:paddingRight="@dimen/_25sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_light"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_20ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/worksans_light"
                    android:text="@string/dummy_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:hint="@string/full_name"
                    android:inputType="textCapWords"
                    tools:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    tools:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:hint="@string/email_id"
                    android:inputType="phone"
                    tools:text="" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    tools:text="" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:buttonTint="@color/colorWhite"
                    android:fontFamily="@font/worksans_light"
                    android:text="@string/i_agree_the_terms_and_conditions"
                    android:textColor="@color/colorWhite" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    style="@style/StyleButtonYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </ScrollView>



    </RelativeLayout>
</layout>