<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_80sdp"
        android:background="@drawable/bg_blue_black"
        tools:context=".activity.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/icn_arrow_left_white"/>/
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_above="@+id/btnSubmit"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_light"
                android:text="@string/upload_license"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/worksans_light"
                android:text="@string/dummy_text"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/StyleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/upload"
                    tools:text="" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/StyleChooseButton"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/choose_photo"
                    android:textAllCaps="false" />

            </RelativeLayout>



        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/StyleButtonYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_25sdp"
            android:text="Submit" />
    </RelativeLayout>
</layout>