<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_500sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_blue_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:src="@drawable/icn_boy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Will Turner"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="willtuener@gmail.com"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                app:fontFamily="@font/worksans_medium" />




        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/colorWhite"/>



    <LinearLayout
        android:id="@+id/llNavHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_home" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavMyClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_contact" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_classes"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_message" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_user" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavPayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_payout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payouts"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingBottom="@dimen/_12sdp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_notification" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_30sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_faq" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/faq_s"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/worksans_medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:background="@drawable/selector_nav_menu"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icn_nav_logout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/worksans_medium" />

    </LinearLayout>




</LinearLayout>