<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/colorBlack"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="#58694125"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_8ssp"
                app:fontFamily="@font/worksans_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:src="@drawable/icn_girl_awarded" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="Will Smith"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_8ssp"
                        app:fontFamily="@font/worksans_medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="Ottawa, Canada"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_8ssp"
                        app:fontFamily="@font/worksans_medium" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="10-Apr-2021 | 5:00 PM | 5Hr"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_8ssp"
                        app:fontFamily="@font/worksans_medium" />


                </LinearLayout>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMessage"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end"
                    android:background="@drawable/drawable_yellow_cornered_less"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/icn_nav_message"
                    android:text="@string/performance"
                    android:textColor="@color/colorBlack"
                    app:tint="@color/colorBlack" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReportCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/bg_edit_text_less"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="Report Cards"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReschedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/bg_edit_text_less"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/reschedule"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/bg_edit_text_less"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorWhiteTrans" />
        </LinearLayout>

    </RelativeLayout>
</layout>